# Popnil

./: CMakeLists.txt  README.md
client/: add_friend.c  add_groups.c  change_password.c  chat.c  chat_new.c  emoji.c  group_chat.c  list.c  login.c  main.c  select_portrait.c  set.c  set_background.c  sign.c  sign_success.c  thread_recv_msg.c  tools.c  tools.h  update_info.c
client/UI/Chat/: CMakeLists.txt  list.c  main.c  sign.c
client/UI/MyGtk/: CMakeLists.txt  chat.c  login.c  main.c  set_background.c
common/include/: client_utils.h  communication.h  database.h  define.h  include.h  rio.h  socket_utils.h
common/srcs/: client_utils.c  communication.c  communication.cpp  rio.c  socket_utils.c
server/: ProjGO.sql  St_Floria.sql  database.c  database.h  database.sql  database.tar  examfriend.sql  examuser.sql  friend_group_server.c  friend_group_server.h  login_on_server.c  login_on_server.cpp  login_on_server.h  login_reg_server.c  login_reg_server.h  main.c  main_thread.c  rec.sql  thread_chat.c
